# curve-explorer

./: Cargo.toml
src/: app_data.rs  app_delegate.rs  container_widget.rs  main.rs  math.rs
src/math/: bezier.rs  bezier3.rs  common.rs  complex.rs  constants.rs  integer.rs  matrix.rs  matrix2x2.rs  real.rs  solvers.rs  vec2.rs  vector.rs
